--- a/sample/biot_client.properties
+++ b/sample/biot_client.properties
@@ -5,7 +5,7 @@ authType=5
 
 #--------------------------------------------------------------------------------------------------
 # address of B.IoT Service Portal
-host=poc-brighticsiot.samsungsds.com
+host=poc.rda.go.kr:8088
 
 #--------------------------------------------------------------------------------------------------
 # informations of OAG server
@@ -17,7 +17,7 @@ apiTrustStore=/home/ubuntu/server_certificates.pem
 
 #--------------------------------------------------------------------------------------------------
 # informations of MQTT server
-thingPort=8009
+thingPort=8001
 # MQTT server ssl option
 # (0 | 1 | 2)
 thingSslOpts=1
