--- a/sample/biot_client.properties
+++ b/sample/biot_client.properties
@@ -5,7 +5,7 @@ authType=5
 
 #--------------------------------------------------------------------------------------------------
 # address of B.IoT Service Portal
-host=poc.rda.go.kr:8088
+host=poc.rda.go.kr
 
 #--------------------------------------------------------------------------------------------------
 # informations of OAG server
